History:

<see Git checkin messages for history>

dev
      - change license to MIT
      - add documentation (fix #10)
      - add tests and use Travis CI (fix #9)
      - Linux: remove MSS library
      - Linux: insanely fast using only ctypes

2.0.0   2016/06/04
      - split the module into several files
      - add issue and pull request templates
      - a lot of code refactor and optimizations
      - MSS: rename save_img() to to_png()
      - MSS: save(): replace 'screen' argument by 'mon'
      - Mac: get rid of the PyObjc module, 100% ctypes
      - Linux: prevent segfault when DISPLAY is set but no X server started
      - Linux: prevent segfault when Xrandr is not loaded
      - Linux: get_pixels() insanely fast, use of MSS library (C code)
      - Windows: fix #6, screenshot not correct on Windows 8

1.0.2   2016/04/22
      - MSS: fix inexistant alias

1.0.1   2016/04/22
      - MSS: fix #7, libpng warning (ignoring bad filter type)

1.0.0   2015/04/16
      - Python 2.6 to 3.5 ready
      - code purgation and review, no more debug informations
      - delete --debug argument
      - MSS: fix #5, add a shortcut to take automatically use the proper MSS class
      - MSS: few optimizations into save_img()
      - Darwin: remove rotation from informations returned by enum_display_monitors()
      - Linux: fix object has no attribute 'display' into __del__
      - Linux: use of XDestroyImage() instead of XFree()
      - Linux: optimizations of get_pixels()
      - Windows: huge optimization of get_pixels()

0.1.1   2015/04/10
      - little code review
      - add doc/TESTING
      - remove Bonus section from README.rst
      - tests: remove test-linux binary
      - Linux: fix monitor count

0.1.0   2015/04/10
      - fix code with YAPF tool
      - better tests and examples
      - Linux: fully functional using Xrandr library
      - Linux: code purgation (no more XML files to parse)

0.0.8   2015/02/04