@@ -59,7 +59,7 @@ author = 'Tiger-222'
 # built documents.
 #
 # The short X.Y version.
-version = '2.0.10'
+version = '2.0.11'
 # The full version, including alpha/beta/rc tags.
 release = 'latest'
 
